@@ -13,6 +13,7 @@
   <property name="destroy_with_parent">False</property>
   <signal name="destroy" handler="on_dbgcode_window_destroy" last_modification_time="Thu, 03 Jun 2004 15:12:40 GMT"/>
   <signal name="delete_event" handler="on_dbgcode_window_delete_event" last_modification_time="Mon, 07 Jun 2004 08:07:55 GMT"/>
+  <signal name="hide" handler="on_dbgcode_window_hide" last_modification_time="Wed, 30 Jun 2004 13:11:02 GMT"/>
 
   <child>
     <widget class="GtkVBox" id="vbox1">
