@@ -13,6 +13,7 @@
   <property name="destroy_with_parent">False</property>
   <signal name="destroy" handler="on_dbgmem_window_destroy" last_modification_time="Tue, 01 Jun 2004 19:43:17 GMT"/>
   <signal name="delete_event" handler="on_dbgmem_window_delete_event" last_modification_time="Mon, 07 Jun 2004 08:10:33 GMT"/>
+  <signal name="hide" handler="on_dbgmem_window_hide" last_modification_time="Wed, 30 Jun 2004 13:11:24 GMT"/>
 
   <child>
     <widget class="GtkVBox" id="vbox1">
