@@ -11,8 +11,9 @@
   <property name="modal">False</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
-  <signal name="destroy" handler="on_dbgmem_window_destroy" last_modification_time="Tue, 01 Jun 2004 19:43:17 GMT"/>
-  <signal name="delete_event" handler="on_dbgmem_window_delete_event" last_modification_time="Mon, 07 Jun 2004 08:10:33 GMT"/>
+  <signal name="destroy" handler="on_dbgpclog_window_destroy" last_modification_time="Wed, 30 Jun 2004 12:57:05 GMT"/>
+  <signal name="delete_event" handler="on_dbgpclog_window_delete_event" last_modification_time="Wed, 30 Jun 2004 12:57:10 GMT"/>
+  <signal name="hide" handler="on_dbgpclog_window_hide" last_modification_time="Wed, 30 Jun 2004 13:13:03 GMT"/>
 
   <child>
     <widget class="GtkVBox" id="vbox1">
@@ -21,7 +22,24 @@
       <property name="spacing">0</property>
 
       <child>
-	<placeholder/>
+	<widget class="GtkLabel" id="label1">
+	  <property name="visible">True</property>
+	  <property name="label" translatable="yes">Trace:</property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">False</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">5</property>
+	  <property name="ypad">0</property>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
+	</packing>
       </child>
 
       <child>
