@@ -13,6 +13,7 @@
   <property name="destroy_with_parent">False</property>
   <signal name="destroy" handler="on_dbgregs_window_destroy" last_modification_time="Mon, 07 Jun 2004 08:26:52 GMT"/>
   <signal name="delete_event" handler="on_dbgregs_window_delete_event" last_modification_time="Mon, 07 Jun 2004 08:11:10 GMT"/>
+  <signal name="hide" handler="on_dbgregs_window_hide" last_modification_time="Wed, 30 Jun 2004 13:12:11 GMT"/>
 
   <child>
     <widget class="GtkScrolledWindow" id="scrolledwindow1">
